# saflow

./: .gitignore  AGENTS.md  CHANGELOG.md  IMPLEMENTATION_SUMMARY.md  PROGRESS.md  README.md  STATISTICS_CLASSIFICATION_README.md  TASKS.md  config.yaml.template  pyproject.toml  setup.sh  tasks.py  validation.txt
code/: __init__.py
code/bids/: __init__.py  generate_bids.py  utils.py
code/classification/: aggregate_chunks.py  aggregate_multifeature.py  aggregate_network_classification.py  aggregate_network_importance.py  classifiers.py  multifeature_provenance.py  multifeature_scientific.py  multifeature_workflow.py  run_classification.py  run_corrected_multifeature.py  run_multifeature.py  run_network_classification.py
code/features/: __init__.py  compute_complexity.py  compute_fooof.py  compute_welch_psd.py  inout_selection.py  loaders.py  utils.py
code/preprocessing/: aggregate_reports.py  autoreject_pipeline.py  ica_pipeline.py  run_preprocessing.py  utils.py
code/qc/: __init__.py  check_dataset.py  check_qc.py
code/source_reconstruction/: __init__.py  apply_atlas.py  run_inverse_solution.py  utils.py
code/statistics/: aggregate_networks.py  corrections.py  effect_sizes.py  network_coherence.py  run_complexity_stats.py  run_group_statistics.py  subject_spectrum.py  visualize_statistics.py
code/utils/: __init__.py  annotations.py  backfill_ar1.py  backfill_bad_trials.py  backfill_ch_names.py  bad_trials.py  behavioral.py  bids_utils.py  colors.py  config.py  data_loading.py  extract_annotations.py  logging_config.py  paths.py  signal_processing.py  slurm.py  space.py  specparam_compat.py  statistics.py  validate_pipeline.py  validation.py  visualization.py  yeo_networks.py
code/visualization/: __init__.py  loaders.py  metrics.py  multifeature_story_panel.py  network_story_panel.py  plot_behavior.py  plot_surface.py  render.py  run_viz.py  run_viz_spectra.py  run_viz_stats.py  stats_classif_panel.py  synthetic_mf_bundle.py  synthetic_network_bundle.py
docs/: analysis_workflow.md  preprocessing_workflow.md  slurm_usage.md
scripts/: batch_cancel.sh  download_atlases.sh  download_fsaverage.sh  export_figure_tables.py  render_manuscript.sh  render_mermaid_docs.sh
slurm/templates/: array.sh.j2  atlas.sh.j2  base.sh.j2  classification.sh.j2  classification_aggregate.sh.j2  classify_multifeature.sh.j2  classify_multifeature_aggregate.sh.j2  corrected_multifeature.sh.j2  features.sh.j2  network_classification.sh.j2  network_classification_aggregate.sh.j2  preprocess_report.sh.j2  preprocessing.sh.j2  source_reconstruction.sh.j2  statistics.sh.j2
tests/: conftest.py  test_corrected_multifeature_analysis.py  test_reproducibility_contracts.py
