[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "saflow"
version = "0.2.0"
description = "Sensor and source-level MEG analysis pipeline for gradCPT task"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = {text = "MIT"}
authors = [
    {name = "Yann Harel", email = "yharel109@gmail.com"},
]
maintainers = [
    {name = "Yann Harel", email = "yharel109@gmail.com"},
]
keywords = [
    "MEG",
    "EEG",
    "neuroscience",
    "analysis",
    "BIDS",
    "MNE",
    "source-reconstruction",
    "machine-learning",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

# Core dependencies
dependencies = [
    # MEG/EEG analysis
    "mne==1.12.1",
    "mne-bids==0.18.0",
    "autoreject==0.4.3",
    "nibabel==5.4.2",  # For reading FreeSurfer surfaces

    # Scientific computing
    "numpy==1.26.4",
    "scipy==1.17.1",
    "pandas==2.3.3",

    # Machine learning
    "scikit-learn==1.8.0",
    "xgboost==2.1.4",
    "mlneurotools==0.2.12",

    # Signal processing & features
    "specparam==2.0.0rc6",
    "antropy==0.2.2",

    # Statistics
    "statsmodels==0.14.6",
    "statannotations==0.7.2",

    # Visualization
    "matplotlib==3.10.9",
    "seaborn==0.13.2",
    "nilearn==0.13.1",
    "plotly==6.7.0",

    # Utilities
    "joblib==1.5.3",
    "tqdm==4.67.3",
    "rich==13.9.4",
    "h5io==0.2.5",
    "str2bool==1.1",

    # Configuration & environment
    "pyyaml==6.0.3",
    "python-dotenv==1.2.2",
    "click==8.4.0",
]

[project.optional-dependencies]
# Development dependencies
dev = [
    "ruff==0.15.13",
    "mypy==2.1.0",
    "pre-commit==4.6.0",
    "ipython==9.13.0",
    "jupyter==1.1.1",
    "invoke==3.0.3",
]

# Testing dependencies
test = [
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
    "pytest-xdist==3.8.0",
    "coverage[toml]==7.14.0",
]

# Documentation dependencies
docs = [
    "sphinx==7.4.7; python_version < '3.10'",
    "sphinx==8.1.3; python_version == '3.10'",
    "sphinx==9.0.4; python_version == '3.11'",
    "sphinx==9.1.0; python_version >= '3.12'",
    "sphinx-rtd-theme==3.1.0",
    "sphinx-autodoc-typehints==2.3.0; python_version < '3.10'",
    "sphinx-autodoc-typehints==3.0.1; python_version == '3.10'",
    "sphinx-autodoc-typehints==3.6.1; python_version == '3.11'",
    "sphinx-autodoc-typehints==3.10.2; python_version >= '3.12'",
    "myst-parser==3.0.1; python_version < '3.10'",
    "myst-parser==4.0.1; python_version == '3.10'",
    "myst-parser==5.1.0; python_version >= '3.11'",
]

# HPC/SLURM utilities
hpc = [
    "jinja2==3.1.6",
]

# All optional dependencies
all = [
    "saflow[dev,test,docs,hpc]",
]

[project.urls]
Homepage = "https://github.com/hyruuk/saflow"
Repository = "https://github.com/hyruuk/saflow"
Documentation = "https://github.com/hyruuk/saflow/blob/main/README.md"
"Bug Tracker" = "https://github.com/hyruuk/saflow/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["code*"]

# ============================================================================
# Ruff Configuration
# ============================================================================
[tool.ruff]
# Line length
line-length = 100
indent-width = 4

# Target Python 3.9+
target-version = "py39"

# Exclude common directories
exclude = [
    ".git",
    ".venv",
    "env",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
    "logs",
    "reports",
    "data",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
]

[tool.ruff.lint]
# Enable specific rule sets
select = [
    "E9",     # syntax/runtime pycodestyle errors
    "F63",    # invalid print/raise/assert pyflakes checks
    "F7",     # control-flow pyflakes checks
    "F82",    # undefined-name pyflakes checks
]

# Ignore specific rules
ignore = [
    "E501",   # Line too long (handled by formatter)
    "B008",   # Function calls in argument defaults
    "B904",   # Use 'raise from' for exception chaining (can be overly strict)
    "RET504", # Unnecessary variable assignment before return
    "SIM108", # Use ternary operator (can reduce readability)
    "PTH123", # open() should be replaced by Path.open() (too strict)
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
# Test files can use assertions and relative imports
"tests/**/*.py" = ["S101", "TID252"]
# __init__.py files can have unused imports
"__init__.py" = ["F401", "F403"]

[tool.ruff.lint.isort]
known-first-party = ["code"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Indent with spaces
indent-style = "space"

# Respect magic trailing commas
skip-magic-trailing-comma = false

# Use Unix line endings
line-ending = "auto"

# ============================================================================
# Pytest Configuration
# ============================================================================
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Output options
addopts = [
    "-v",                          # Verbose output
    "--strict-markers",            # Strict marker checking
    "--tb=short",                  # Short traceback format
]

# Test discovery
norecursedirs = [
    ".*",
    "build",
    "dist",
    "*.egg",
    "venv",
    "env",
    "data",
    "logs",
    "reports",
]

# Markers for organizing tests
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "preprocessing: marks tests for preprocessing module",
    "features: marks tests for feature extraction module",
    "statistics: marks tests for statistics module",
    "classification: marks tests for classification module",
    "visualization: marks tests for visualization module",
    "requires_data: marks tests that require real data",
    "requires_slurm: marks tests that require SLURM",
]

# ============================================================================
# Mypy Configuration
# ============================================================================
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Set to true once codebase is fully typed
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true

# Per-module options
[[tool.mypy.overrides]]
module = [
    "mne.*",
    "mne_bids.*",
    "autoreject.*",
    "specparam.*",
    "mlneurotools.*",
]
ignore_missing_imports = true

# ============================================================================
# Coverage Configuration
# ============================================================================
[tool.coverage.run]
source = ["code"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
    "*/setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"
